# tg-codex-gateway

./: .env.example  .gitignore  AGENTS.md  MANIFEST.in  README.md  bot.py  env.example  gateway.py  pyproject.toml  setup.cfg
scripts/: dev-install.sh
telegram_codex_gateway/: cli.py  opencode_runtime.py
telegram_codex_gateway/backends/: __init__.py  base.py  codex.py  opencode.py
telegram_codex_gateway/resources/opencode/: __init__.py
telegram_codex_gateway/resources/opencode/skills/: README.md  __init__.py
telegram_codex_gateway/resources/opencode/skills/gh-pm/: SKILL.md
