[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-codex-gateway"
version = "0.1.0"
description = "Telegram to Codex gateway bot."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pyrogram"]

[project.scripts]
telegram-codex-gateway = "telegram_codex_gateway.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["telegram_codex_gateway*"]
