[metadata]
name = telegram-codex-gateway
version = 0.1.0
description = Telegram to Codex gateway bot.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pyrogram

[options.packages.find]
include =
    telegram_codex_gateway*

[options.entry_points]
console_scripts =
    telegram-codex-gateway = telegram_codex_gateway.cli:main
